# FileCommander

./: CMakeLists.txt  README.md  run_path.txt
src/: FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  NetworkManager.cpp  NetworkManager.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  main.cpp
ui/: mainwindow.ui
